# Kadiya

./: CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  httpServerConfig.cfg
Doc/: README.md  touch.md
SaveAside/: ParseHttpResponse.cpp
appDevExamples/: README.txt
appDevExamples/server/: mainHttpServer.cpp
examples/client/: httpClient.cpp
examples/clientAPI/: Makefile  client.cpp  httpClient.cpp
examples/server/: mainHttpProxy.cpp  mainHttpServer.cpp
examples/serverAPI/: Makefile  mainHttpProxy.cpp  mainHttpProxy2.0.cpp  mainHttpServer.cpp  mainProxy.cpp
include/: SocketException.hpp  TCPclient.hpp  TCPserver.hpp  TCPsocket.hpp  __TCPserver.hpp  __TCPsocket.hpp  helpers.hpp  socketError.hpp
include/handlers/: HTTPhandlers.hpp
include/http/: http.hpp
include/http/httpServer/: __httpServer.hpp  httpServer.hpp  httpServerConfig.hpp  httpServerHelpers.hpp
include/serverDB/: __httpServer.hpp  httpProxy.hpp  httpProxy2.0.hpp  httpServer.hpp  socketServer.hpp
removeSpace/removeSpace/: Header.h
src/: TCPclient.cpp  TCPserver.cpp  TCPsocket.cpp
src/handlers/: HTTPhandlers.cpp  http.cpp
src/http/: http.cpp
src/http/httpProxy/: httpProxy.cpp
src/http/httpServer/: 500.html  httpServer.cpp
src/serverDB/: httpProxy.cpp  httpProxy2.0.cpp  httpServer.cpp
src/threadCore/: TCPserverThreadCore.cpp
www/: file.html  file.html.bak  file1.txt  index.html
